remove tenant_id from jwt endpoint
